# Tracient

./: .gitignore  README.md  render.yaml
backend/: auth.py  main.py  pyproject.toml  settings.py  utils.py
backend/src/: utils.py
backend/src/admin/: create.py  dashboard.py  datadef.py
backend/src/api/: auth.py
backend/src/api/actions/: assets.py  organizations.py  twilio.py  users.py
backend/src/api/pages/: admin.py  dashboard.py
backend/src/assets/: circulation.py  create.py  datadef.py  update.py
backend/src/database/: mongodb.py
backend/src/notifs/: twillo.py
backend/src/organizations/: create.py  datadef.py  interface.py
backend/src/users/: create.py  datadef.py  update.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/admin/: dashboard.tsx  login.tsx  signup.tsx
frontend/src/admin/functional/: types.ts
frontend/src/admin/organizations/: create.tsx  interface.tsx  signin.tsx
frontend/src/admin/organizations/components/: assets.tsx  member.tsx
frontend/src/admin/organizations/functional/: functional.ts  types.ts
frontend/src/assets/: index.tsx
frontend/src/assets/functional/: types.ts
frontend/src/functional/: auth.ts  utils.ts
frontend/src/user/: index.tsx
