[project]
name = "kumon-signin-backend"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pymongo==4.6.3",
    "motor==3.3.2",
    "beanie==1.25.0",
    "pydantic",
    "python-dotenv",
    "pydantic-settings",
    "bcrypt",
    "python-jose[cryptography]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]